<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 Federico Iosue (federico.iosue@gmail.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="settings_navdrawer_on_exit"
        android:summary="@string/settings_navdrawer_on_exit_summary"
        android:title="@string/settings_navdrawer_on_exit" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="settings_instant_search"
        android:title="@string/settings_instant_search" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="settings_swipe_to_trash"
        android:title="@string/settings_swipe_to_trash" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="settings_auto_location"
        android:title="@string/settings_auto_location"
        android:summary="@string/settings_auto_location_summary" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="settings_dynamic_menu"
        android:title="@string/settings_dynamic_menu"
        android:summary="@string/settings_dynamic_menu_summary" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="settings_show_uncategorized"
        android:title="@string/settings_show_uncategorized"
        android:summary="@string/settings_show_uncategorized_summary" />

    <EditTextPreference
        android:inputType="number"
        android:key="settings_max_video_size"
        android:summary="@string/settings_max_video_size_summary"
        android:title="@string/settings_max_video_size" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/checked_items_behavior"
        android:entryValues="@array/checked_items_behavior_values"
        android:key="settings_checked_items_behavior"
        android:title="@string/settings_checked_items_behavior"
        android:dialogTitle="@string/settings_checked_items_behavior_summary" />
    
    <CheckBoxPreference
        android:key="acra.enable"
        android:title="@string/settings_error_reporting"
        android:summaryOn="@string/settings_error_reporting_summary_on"
        android:summaryOff="@string/settings_error_reporting_summary_off"
        android:defaultValue="true" />

</PreferenceScreen>
