<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Federico Iosue (federico.iosue@gmail.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_action_select_all"
        android:orderInCategory="50"
        app:showAsAction="always"
        android:title="@string/select_all"
        android:visible="false"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|always"/>
    <item
        android:id="@+id/menu_tags"
        android:icon="@drawable/ic_action_labels"
        android:orderInCategory="200"
        android:title="@string/tags"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="300"
        android:title="@string/add_note"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="400"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_merge"
        android:icon="@drawable/ic_action_add_to_queue"
        android:orderInCategory="400"
        android:title="@string/merge"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_category"
        android:icon="@drawable/ic_action_category"
        android:orderInCategory="600"
        android:title="@string/category"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_archive"
        android:icon="@drawable/ic_archive_dark"
        android:orderInCategory="1000"
        android:title="@string/archive"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_unarchive"
        android:icon="@drawable/ic_unarchive_dark"
        android:orderInCategory="1000"
        android:title="@string/unarchive"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_trash"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="1100"
        android:title="@string/trash"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_untrash"
        android:icon="@drawable/ic_action_untrash"
        android:orderInCategory="1100"
        android:title="@string/untrash"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_action_cancel"
        android:orderInCategory="1200"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_action_sort_by_size"
        android:orderInCategory="600"
        android:title="@string/sort"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_add_category"
        android:icon="@drawable/ic_action_new_category"
        android:orderInCategory="700"
        android:title="@string/add_category"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_expanded_view"
        android:orderInCategory="800"
        android:showAsAction="never"
        android:title="@string/expanded_view"
        android:visible="false"/>
    <item
        android:id="@+id/menu_contracted_view"
        android:orderInCategory="800"
        android:showAsAction="never"
        android:title="@string/contracted_view"
        android:visible="false"/>
    <item
        android:id="@+id/menu_synchronize"
        android:orderInCategory="850"
        android:showAsAction="never"
        android:title="@string/synchronize"
        android:visible="false"/>
    <item
        android:id="@+id/menu_empty_trash"
        android:orderInCategory="900"
        android:showAsAction="never"
        android:title="@string/empty_trash"
        android:visible="false"/>
    

</menu>