<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 Federico Iosue (federico.iosue@gmail.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:fitsSystemWindows="true">

    <SwitchPreference
            android:defaultValue="true"
            android:key="settings_dynamic_menu"
            android:title="@string/settings_dynamic_menu"
            android:summary="@string/settings_dynamic_menu_summary"/>

    <SwitchPreference
            android:defaultValue="true"
            android:key="settings_show_category_count"
            android:summary="@string/settings_show_category_count_summary"
            android:title="@string/settings_show_category_count"/>

    <SwitchPreference
            android:defaultValue="false"
            android:key="settings_show_uncategorized"
            android:title="@string/settings_show_uncategorized"
            android:summary="@string/settings_show_uncategorized_summary"/>

    <SwitchPreference
            android:defaultValue="false"
            android:key="settings_navdrawer_on_exit"
            android:summary="@string/settings_navdrawer_on_exit_summary"
            android:title="@string/settings_navdrawer_on_exit"/>

</PreferenceScreen>
